# Guardian

./: .env-public  .gitignore  Cargo.toml  LICENSE  README.md
docs/: audit_integration_test.md  audit_logging.md  audit_performance_test.md
public-docs/: api-v1.0.md  api-v1.2.md
scripts/: init_db.py  public.sql  system_monitor.py
src/: main.rs  router.rs
src/controller/: admin_controller.rs  auth_controller.rs  mod.rs  permission_controller.rs  role_controller.rs  system_info_controller.rs
src/dto/: admin.rs  auth.rs  mod.rs  permission.rs  role.rs  system_info.rs  two_fa.rs
src/entities/: admin_roles.rs  admins.rs  audit_logs.rs  guardian_systeminfo.rs  links.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  token_blacklist.rs
src/middleware/: auth.rs  mod.rs  permission.rs  rate_limit.rs
src/response/: mod.rs
src/service/: admin_service.rs  auth_service.rs  init.rs  mod.rs  permission_check_service.rs  permission_check_service_tests.rs  permission_service.rs  role_service.rs  system_info_service.rs
src/utils/: crypto.rs  jwt.rs  mod.rs
