[package]
name = "Guardian"
version = "0.1.0"
edition = "2024"
authors = ["Guardian team"]
license = "MIT"
description = "快速构建后台管理系统"
repository = "https://github.com/cherry-llt/Guardian"
keywords = ["auth", "jwt", "axum", "2fa", "httpserver"]
categories = ["authentication", "web-programming"]

[features]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Web 框架
axum = { version = "0.8" }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tower-http = { version = "0.6.7", features = ["cors"] }

# JWT 和认证
jsonwebtoken = "9"

# 加密和哈希
chacha20poly1305 = "0.10"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "std"] }

# Argon2密码哈希
argon2 = "0.5"

# TOTP 2FA
totp-rs = { version = "5.7", features = ["serde", "qr", "gen_secret"] }

# uuid
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# 编码
base64 = "0.22"

# 随机数
rand = "0.8"

# 环境变量
dotenv = "0.15"

# 并发数据结构
dashmap = "6"

# Decimal 类型
rust_decimal = "1.32"

[dev-dependencies]